# hazedumper-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  build.rs  config.json  rustfmt.toml
.github/workflows/: rust.yml
memlib-rs/: Cargo.toml
memlib-rs/src/: findpattern.rs  lib.rs  module.rs  process.rs  snapshot.rs
src/: config.rs  default.json  helpers.rs  main.rs  output.rs  sigscan.rs
src/csgo/: mod.rs  netvars.rs
src/games/: csgo.rs  mod.rs
src/games/csgo/: clientclass.rs  mod.rs  netvars.rs  prop.rs  table.rs
src/memlib/: findpattern.rs  mod.rs  module.rs  process.rs  snapshot.rs
src/output/: csharp.rs  dart.rs  hpp.rs  mod.rs  rust.rs  vbnet.rs
