[package]
name = "hazedumper"
version = "2.4.2"
authors = ["frk <hazefrk+dev@gmail.com>"]
build = "build.rs"
edition = "2018"

[package.metadata.winres]
ProductName = "HazeDumper"
CompanyName = "Haze-Productions"
OriginalFilename = "hazedumper.exe"
LegalCopyright = "MIT-License"

[dependencies]
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
structopt = "0.3.2"
structopt-derive = "0.3.2"
winapi = "0.3.8"
log = "0.4.8"
simplelog = "0.7.3"
failure = "0.1.5"
regex = "1.3.1"
chrono = { version = "0.4.9", features = ["serde"] }
serde_yaml = "0.8.9"
toml = "0.5.3"
nom = "4.2.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["basetsd","handleapi","memoryapi","minwindef","ntdef","processthreadsapi","tlhelp32","winnt", "wow64apiset"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
